# XD

./: .env.example  .envrc  .gitignore  CLAUDE.md  Dockerfile.python  README.md  alembic.ini  compose.yml  glitchtip-compose.yml  pyproject.toml
.github/workflows/: build.yml
alembic/: env.py
alembic/versions/: 20260514_0001_initial_schema.py
dh/: __init__.py  __main__.py  cli.py  config.py  logging.py  observability.py  spend.py
dh/api/: __init__.py  main.py  schemas.py
dh/classify/: __init__.py  base.py  codex.py  factory.py  stub.py
dh/db/: __init__.py  engine.py  models.py
dh/notifications/: __init__.py  discord.py
dh/persistence/: __init__.py  spike.py
dh/score/: __init__.py  composite.py  normalize.py
dh/sources/: __init__.py
dh/sources/github/: __init__.py  contents.py  context.py  gharchive.py  repos.py  search.py
dh/sources/openpagerank/: __init__.py  client.py
dh/sources/rdap/: __init__.py  client.py
dh/sources/wayback/: __init__.py  cdx.py
dh/spikes/: __init__.py  a2.py
dh/workers/: __init__.py  a2.py  classifier.py  rdap.py  scheduler.py  scoring.py  wayback.py
docs/: CZDS_APPLICATIONS.md  IMPLEMENTATION_NOTES.md  PRD.md  RESEARCH.md  TECH_STACK.md
docs/spikes/: a2-yield-deadness.md  a2-yield-stale.md
scripts/: backup-dh-pg.sh  install-pg-backup-timer.sh
tests/: conftest.py  test_api.py  test_composite.py  test_contents_extractor.py  test_discord_digest.py  test_github_context.py  test_persistence.py  test_rdap_helpers.py  test_spend.py  test_wayback_parser.py  test_worker_a2.py  test_worker_rdap.py  test_worker_wayback.py
web/: Dockerfile.web  README.md  package-lock.json  package.json  vite.config.ts
web/src/: app.html
web/src/lib/: api.test.ts  api.ts  events.ts
web/src/routes/: +layout.svelte  +page.server.ts  +page.svelte
web/src/routes/candidates/: +page.server.ts  +page.svelte
web/src/routes/candidates/[domain]/: +page.server.ts  +page.svelte
web/src/routes/scoring/: +page.server.ts  +page.svelte
