[project]
name = "domain-hunter"
version = "0.1.0"
description = "Self-hosted expired-domain discovery + scoring pipeline. Personal use."
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "Proprietary" }
authors = [{ name = "Pronav" }]

dependencies = [
    # --- API + serialization ---
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "orjson>=3.10",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",

    # --- DB ---
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30",
    "psycopg[binary]>=3.2",       # sync driver — needed by APScheduler SQLAlchemyJobStore
    "pgvector>=0.3.6",
    "alembic>=1.14",

    # --- HTTP / scraping ---
    "httpx[http2]>=0.28",
    "tenacity>=9.0",
    "aiolimiter>=1.2",
    "tldextract>=5.1",
    "dnspython>=2.7",

    # --- CLI / workers ---
    "typer>=0.13",
    "anyio>=4.6",
    "apscheduler>=3.10",

    # --- Caching / IPC ---
    "redis>=5.2",

    # --- External data ---
    "google-cloud-bigquery>=3.27",

    # --- Observability ---
    "structlog>=24.4",
    "prometheus-fastapi-instrumentator>=7.0",
    "opentelemetry-api>=1.28",
    "opentelemetry-sdk>=1.28",
    "sentry-sdk>=2.18",         # GlitchTip-compatible
]

[project.optional-dependencies]
dev = [
    "ruff>=0.7",
    "basedpyright>=1.20",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-anyio>=0.0",
    "testcontainers[postgres]>=4.8",
    "polyfactory>=2.18",
    "dirty-equals>=0.8",
    "respx>=0.21",              # httpx mocking
]

embeddings = [
    # Deferred until Phase 4; included for `uv sync --extra embeddings`
    "sentence-transformers>=3.2",
]

[project.scripts]
dh = "dh.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dh"]

# -----------------------------------------------------------------------------
# Ruff
# -----------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["alembic/versions/*"]

[tool.ruff.lint]
select = [
    "E", "F", "W",     # pycodestyle / pyflakes
    "I",                # isort
    "N",                # pep8-naming
    "UP",               # pyupgrade
    "B",                # flake8-bugbear
    "A",                # flake8-builtins
    "C4",               # flake8-comprehensions
    "PIE",              # flake8-pie
    "PLC", "PLE", "PLW", # pylint subset
    "RUF",              # ruff-specific
    "ASYNC",            # async pitfalls
    "S",                # bandit
]
ignore = [
    "E501",  # let formatter handle line length
    "S101",  # assert in tests is fine
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S", "PLR2004"]
# FastAPI Depends()/Query() must be passed as default values — that's the framework idiom.
"dh/api/**/*.py" = ["B008"]

# -----------------------------------------------------------------------------
# basedpyright
# -----------------------------------------------------------------------------
[tool.basedpyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
include = ["dh", "tests"]
exclude = ["alembic/versions/**"]
reportMissingTypeStubs = false
reportUnusedCallResult = false

# -----------------------------------------------------------------------------
# pytest
# -----------------------------------------------------------------------------
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --strict-markers -m 'not integration'"
markers = [
    "integration: tests that need a real Postgres (run via testcontainers)",
]
